// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ButtonToTop props testing bgStyle="filled" 1`] = `
<Button
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing bgStyle="outline" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing bgStyle="transparent" 1`] = `
<Button
  bgStyle="transparent"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing className="my-classname" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top my-classname"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing className="test-classname" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top test-classname"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing controlled=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing controlled=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing default props 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing disabled=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing disabled=false 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing disabled=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  disabled={true}
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing disabled=true 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  disabled={true}
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing fullTextSearchPriority=0 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top uu-fulltextsearch-0"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing fullTextSearchPriority=0 2`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top uu-fulltextsearch-0"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing hidden=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing hidden=false 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing hidden=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing hidden=true 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing icon="mdi-chevron-up" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing icon="mdi-menu" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-menu"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing id="myId" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="myId-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing id="test-id" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="test-id-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing mainAttrs=undefined 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing name="myName" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="bigBox" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="bigBoxCollection" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="box" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="box" 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="boxCollection" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="inline" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="inline" 3`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="page" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="smallBox" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="smallBoxCollection" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing nestingLevel="spa" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing noPrint=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing noPrint=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing offset=150 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing offset=3000 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing pureRender=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing pureRender=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  pureRender={true}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing scrollDuration=800 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing scrollDuration=3000 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing selected=false 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing selected=true 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  selected={true}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing size="l" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  size="l"
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing size="m" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing size="s" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  size="s"
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing size="xl" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  size="xl"
  style={Object {}}
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing style="padding:8px; borderRadius: 2px" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing style={"margin":8} 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;

exports[`UU5.Bricks.ButtonToTop props testing tooltip="My Tooltip" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-button-to-top"
  hidden={true}
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="smallBox"
  onClick={[Function]}
  style={Object {}}
  tooltip="My Tooltip"
>
  <Icon
    icon="mdi-chevron-up"
  />
</Button>
`;
